--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,16 @@ jobs:
       go: 1.11.x
       script: go test ./... -race
     - stage: "Build"
+      if: branch = master OR branch = develop OR branch =~ /release\/.*/ OR branch =~ /hotfix\/.*/ OR branch =~ /v[0-9]+[0-9.]*/
+      os: linux
+      go: 1.13.x
+      script: go build
+    - stage: "Test"
+      if: branch = master OR branch = develop OR branch =~ /release\/.*/ OR branch =~ /hotfix\/.*/ OR branch =~ /v[0-9]+[0-9.]*/
+      os: linux
+      go: 1.13.x
+      script: go test ./... -race
+    - stage: "Build"
       os: linux
       go: 1.12.x
       script: go build
