--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "axios": "^0.21.1",
     "rfc4648": "^1.4.0"
   },
   "devDependencies": {
