--- a/client/package.json
+++ b/client/package.json
@@ -4,34 +4,17 @@
   "description": "Client wrappers for httpgrpc, specifically for websocket logic.",
   "main": "lib/index.js",
   "dependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.12",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "axios": "^0.21.1",
-    "rfc4648": "^1.4.0"
+    "@types/node": "^14.14.31",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "copyfiles": "^2.4.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0",
-    "react-dom": "^16.0.0 || ^17.0.0",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "tsc && npm run copy-files",
-    "test": "react-scripts test",
-    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css lib/",
+    "build": "tsc",
     "prepublishOnly": "npm run build"
   },
   "repository": {
