--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@llkennedy/httpgrpc-client",
-  "version": "0.2.5",
+  "name": "@llkennedy/httpgrpc",
+  "version": "0.1.0",
   "description": "Client wrappers for httpgrpc, specifically for websocket logic.",
   "main": "lib/index.js",
   "dependencies": {
