--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,14 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "@types/sinon": "^9.0.10",
+    "chai": "^4.3.3",
+    "mocha": "^8.3.0",
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -15,6 +23,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "prepublishOnly": "npm run build"
   },
   "repository": {
