--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/seedrandom": "^2.4.28",
     "@types/sinon": "^9.0.10",
     "chai": "^4.3.3",
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
+    "seedrandom": "^3.0.5",
     "sinon": "^9.2.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
