--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@llkennedy/sleep.js": "^1.0.1",
     "@types/node": "^14.14.31",
-    "axios": "^0.21.1"
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
