--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "chai": "^4.3.3",
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
     "seedrandom": "^3.0.5",
     "sinon": "^9.2.4",
     "ts-node": "^9.1.1",
@@ -27,7 +28,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.publish.json",
+    "build": "rimraf ./lib && tsc -p tsconfig.publish.json",
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "prepublishOnly": "npm run build"
   },
