--- a/internal/testservice/client/package.json
+++ b/internal/testservice/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@llkennedy/httpgrpc": "^0.2.0",
     "@llkennedy/httpgrpc-client": "^0.2.5",
     "@llkennedy/sleep.js": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "rfc4648": "^1.4.0",
     "typescript": "^4.2.2",
     "web-vitals": "^1.1.0"
   },
