--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@llkennedy/httpgrpc",
-  "version": "0.5.0",
-  "description": "Client wrappers for httpgrpc, specifically for websocket logic.",
+  "name": "@llkennedy/mercury",
+  "version": "0.1.0",
+  "description": "Client wrappers for mercury, specifically for websocket logic.",
   "main": "lib/index.js",
   "dependencies": {
     "@types/node": "^14.14.31",
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/llkennedy/httpgrpc"
+    "url": "git+https://github.com/llkennedy/mercury"
   },
   "eslintConfig": {
     "extends": [
